Fix title page alignment

--- a/site.css
+++ b/site.css
@@ -55,11 +55,15 @@ figcaption {
     line-height: 20px;
 }
 
-#cover h2 {
+.title {
     background: rgba(0, 0, 0, 0);
     color: #FFF;
-    line-height: 54px;
-    font-size: 50px;
+    line-height: 50px;
+    font-size: 45px;
+}
+
+.author {
+    padding-top: 50px;
 }
 
 #cover h3 {
